# guruvAI

./: .gitignore  README.md  index.html  index.mjs  package-lock.json  package.json  pyproject.toml  server-configuration.json  server.py  test.html
iinkTS/: package-lock.json
src/guruvai/: __init__.py
